# Anchor

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  LICENSE  README.md  install.sh
docs/: packaging.md
docs/screenshots/: README.md
resources/: com.voxelnorth.Anchor.desktop  com.voxelnorth.Mountie.desktop  com.voxelnorth.ZorinWebAppManager.desktop
scripts/: build-deb.sh  fix-gh-auth.sh  fix-gnome-keyring.sh
src/: browser.rs  desktop.rs  favicon.rs  main.rs  paths.rs  webapp.rs
src/ui/: create_dialog.rs  mod.rs  window.rs
