[package]
name = "mountie"
version = "0.1.0"
edition = "2021"
description = "Mountie helps you mount websites into desktop apps on Linux with ease — isolated web apps for Zorin, Ubuntu, and GNOME"
license = "MIT"
authors = ["Voxel North"]
repository = "https://github.com/maplepreneur/Mountie"
homepage = "https://github.com/maplepreneur/Mountie"
readme = "README.md"
keywords = ["webapp", "linux", "gnome", "zorin", "pwa"]
categories = ["gui", "command-line-utilities"]

[dependencies]
anyhow = "1"
dirs = "5"
gtk = { version = "0.9", package = "gtk4", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
image = { version = "0.25", default-features = true, features = ["ico", "png", "jpeg", "webp", "gif"] }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls", "gzip"] }
scraper = "0.20"
thiserror = "1"
url = "2"

[profile.release]
lto = true
codegen-units = 1
strip = true
